--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./sass/index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
     <header>
         <div class="container main-container">
             <div class="logo">Logo</div>
-            <nav><ul class="nav__list">
-                <li class="nav--item">О компании</li>
-                <li class="nav--item">Портфолио</li>
-                <li class="nav--item">Услуги</li>
-                <li class="nav--item">Контакты</li>
-            </ul></nav>
+            <nav>
+                <ul class="nav__list">
+                    <li class="nav--item">О компании</li>
+                    <li class="nav--item">Портфолио</li>
+                    <li class="nav--item">Услуги</li>
+                    <li class="nav--item">Контакты</li>
+                </ul>
+            </nav>
             <div>
                 <div class="darmode">dark</div>
                 <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
@@ -24,5 +29,67 @@
             </div>
         </div>
     </header>
+
+
+
+    <section class="info container">
+        <div class="info-left">
+            <h2 class="info-name">Kompaniya haqida</h2>
+            <p class="info-text">
+                Agentlik-bu mijozlarga o'z bizneslari uchun sifatli va innovatsion echimlarni taqdim etish maqsadida
+                tashkil etilgan veb-agentlik. Bizning jamoamiz mijozlarga moslashtirilgan va sifatli mahsulotni taklif
+                qilish uchun yaqin hamkorlikda ishlaydigan tajribali veb-dizayn, ishlab chiqish va marketing
+                mutaxassislaridan iborat.
+            </p>
+            <p class="info-text">
+                Biz veb-dizayn, veb-sayt va mobil ilovalarni ishlab chiqish, SEO optimallashtirish, kontent yaratish va
+                reklama kampaniyalarini o'z ichiga olgan keng ko'lamli xizmatlarni taklif etamiz. Biz eng yangi
+                texnologiyalar va innovatsion usullardan foydalangan holda brendni rivojlantirish va sotishni
+                ko'paytirish bilan shug'ullanamiz.
+            </p>
+        </div>
+        <div class="info-right">
+            <div class="card">
+                <h2>20+</h2>
+                <p>Проектов запустил</p>
+            </div>
+            <div class="card">
+                <h2>4 года</h2>
+                <p>Опыта разработки</p>
+            </div>
+            <div class="card">
+                <h2>12+</h2>
+                <p>Профессионалов</p>
+            </div>
+            <div class="card">
+                <h2>4 года</h2>
+                <p>Опыта разработки</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+    <footer class="footer">
+        <h2>LOGO</h2>
+        <div class="footer__company-address">
+            <p class="company-address__text">
+                <i class="fa-solid fa-location-dot"></i>
+                Manzil: Toshkent shahri, Sergeli tumani, Navro’z ko’cha 3-uy. <br>
+                Mo’ljal: “ASIA AUTO” avtosalon ichki qismi
+            </p>
+        </div>
+    </footer>
+
+    <script src="./icons/all.js"></script>
 </body>
+
 </html>
