--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./sass/index.css">
 </head>
+
 <body>
     <header>
         <div class="container main-container">
             <div class="logo">Logo</div>
-            <nav><ul class="nav__list">
-                <li class="nav--item">О компании</li>
-                <li class="nav--item">Портфолио</li>
-                <li class="nav--item">Услуги</li>
-                <li class="nav--item">Контакты</li>
-            </ul></nav>
-            <div>
-                <div class="darmode">dark</div>
+            <nav>
+                <ul class="nav__list">
+                    <li class="nav--item">О компании</li>
+                    <li class="nav--item">Портфолио</li>
+                    <li class="nav--item">Услуги</li>
+                    <li class="nav--item">Контакты</li>
+                </ul>
+            </nav>
+            <div class="header_qoshimcha">
+                <div class="darcmode"><span class="sun"><i class="bi bi-brightness-high"></i></span><span class="moon activ_darcmode"><i class="bi bi-moon"></i></span></div>
                 <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
                 <button>Заказать звонок</button>
             </div>
         </div>
     </header>
+    <script src="./index.js"></script>
 </body>
+
 </html>
