--- a/index.html
+++ b/index.html
@@ -49,21 +49,25 @@
             </p>
         </div>
         <div class="info-right">
-            <div class="card">
-                <h2>20+</h2>
-                <p>Проектов запустил</p>
+            <div class="info-right__col">
+                <div class="info-right__card">
+                    <h2 class="info-card__name">20+</h2>
+                    <p class="info-card__text">Проектов запустил</p>
+                </div>
+                <div class="info-right__card">
+                    <h2 class="info-card__name">12+</h2>
+                    <p class="info-card__text">Профессионалов</p>
+                </div>
             </div>
-            <div class="card">
-                <h2>4 года</h2>
-                <p>Опыта разработки</p>
-            </div>
-            <div class="card">
-                <h2>12+</h2>
-                <p>Профессионалов</p>
-            </div>
-            <div class="card">
-                <h2>4 года</h2>
-                <p>Опыта разработки</p>
+            <div class="info-right__col">
+                <div class="info-right__card">
+                    <h2 class="info-card__name">4 года</h2>
+                    <p class="info-card__text">Опыта разработки</p>
+                </div>
+                <div class="info-right__card">
+                    <h2 class="info-card__name">4 года</h2>
+                    <p class="info-card__text">Опыта разработки</p>
+                </div>
             </div>
         </div>
     </section>
@@ -78,7 +82,7 @@
 
 
 
-    <footer class="footer">
+    <footer class="footer container">
         <h2>LOGO</h2>
         <div class="footer__company-address">
             <p class="company-address__text">
