--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
                     <li class="nav--item">Контакты</li>
                 </ul>
             </nav>
-            <div>
-                <div class="darmode">dark</div>
-            <div class="header_qoshimcha">
-                <div class="darcmode"><span class="sun"><i class="bi bi-brightness-high"></i></span><span class="moon activ_darcmode"><i class="bi bi-moon"></i></span></div>
-                <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
-                <button>Заказать звонок</button>
-            </div>
-        </div>
+                <div class="header_qoshimcha">
+                    <div class="darcmode"><span class="sun"><i class="bi bi-brightness-high"></i></span><span
+                            class="moon activ_darcmode"><i class="bi bi-moon"></i></span></div>
+                    <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
+                    <button>Заказать звонок</button>
+                </div>
     </header>
 
 
