--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <li class="nav--item">Контакты</li>
                 </ul>
             </nav>
-                <div class="header_qoshimcha">
-                    <div class="darcmode"><span class="sun"><i class="bi bi-brightness-high"></i></span><span
-                            class="moon activ_darcmode"><i class="bi bi-moon"></i></span></div>
-                    <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
-                    <button>Заказать звонок</button>
-                </div>
+            <div class="header_qoshimcha">
+                <div class="darcmode"><span class="sun"><i class="bi bi-brightness-high"></i></span><span
+                        class="moon activ_darcmode"><i class="bi bi-moon"></i></span></div>
+                <div class="header--phone"><span>+998 90 777-77-77</span><span>chotatam@gmail.com</span></div>
+                <button>Заказать звонок</button>
+            </div>
     </header>
 
 
@@ -36,13 +36,13 @@
     <section class="info container">
         <div class="info-left">
             <h2 class="info-name">Kompaniya haqida</h2>
-            <p class="info-text">
+            <p class="info-text info-text__night">
                 Agentlik-bu mijozlarga o'z bizneslari uchun sifatli va innovatsion echimlarni taqdim etish maqsadida
                 tashkil etilgan veb-agentlik. Bizning jamoamiz mijozlarga moslashtirilgan va sifatli mahsulotni taklif
                 qilish uchun yaqin hamkorlikda ishlaydigan tajribali veb-dizayn, ishlab chiqish va marketing
                 mutaxassislaridan iborat.
             </p>
-            <p class="info-text">
+            <p class="info-text info-text__night">
                 Biz veb-dizayn, veb-sayt va mobil ilovalarni ishlab chiqish, SEO optimallashtirish, kontent yaratish va
                 reklama kampaniyalarini o'z ichiga olgan keng ko'lamli xizmatlarni taklif etamiz. Biz eng yangi
                 texnologiyalar va innovatsion usullardan foydalangan holda brendni rivojlantirish va sotishni
@@ -75,7 +75,69 @@
 
 
 
-
+    <section class="afzallik container">
+        <div class="row">
+            <h3 class="afzallik-name">Bizning afzalliklarimiz</h3>
+        </div>
+        <div class="row">
+            <div class="afzallik-col">
+                <div class="afzallik-card">
+                    <img src="./img/aylana.png" alt="aylana">
+                    <h5 class="afzallik-card__name">Individual yondashuv</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+                <div class="afzallik-card">
+                    <img src="./img/tog'.png" alt="tog'">
+                    <h5 class="afzallik-card__name">Ekspertiza</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+                <div class="afzallik-card">
+                    <img src="./img/raketa.png" alt="raketa">
+                    <h5 class="afzallik-card__name">Professional xizmat</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+                <div class="afzallik-card">
+                    <img src="./img/aylana.png" alt="aylana">
+                    <h5 class="afzallik-card__name">Individual yondashuv</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+                <div class="afzallik-card">
+                    <img src="./img/tog'.png" alt="tog'">
+                    <h5 class="afzallik-card__name">Ekspertiza</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+                <div class="afzallik-card">
+                    <img src="./img/raketa.png" alt="raketa">
+                    <h5 class="afzallik-card__name">Professional xizmat</h4>
+                        <div class="afzallik-line"></div>
+                        <p class="afzallik-card__text">
+                            Biz har bir mijozga g'amxo'rlik qilamiz va ularning ehtiyojlariga javob beradigan
+                            echimlarni yaratamiz
+                        </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
