--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 
     <main>
         <div class="container hero-container">
-            <!-- <img src="./images/Ellipse_4.png" alt="" class="image-elips"> -->
             <div class="image-elips"></div>
             <div class="hero__text">
                 <h2 class="hero--header">Biz veb-saytlar, ilovalarni
@@ -88,7 +87,9 @@
 
             </div>
             <div class="hero--circle">
-                <canvas id="cobe" style="width: 500px; height: 500px" width="1000" height="1000"></canvas>
+                <canvas id="cobe" width="1000" height="1000"></canvas>
+                <canvas id="cobe2" class="d-n-c" width="500" height="500"></canvas>
+                <canvas id="cobe3" class="d-n-c" width="700" height="700"></canvas>
             </div>
 
             <div class='gradiyent'><img src="./images/Ellipse_3.png" alt=""></div>
@@ -236,38 +237,8 @@
     </footer>
 
 
-    <script type="module">
-        import createGlobe from "https://cdn.skypack.dev/cobe";
-
-        let phi = 0;
-        let canvas = document.getElementById("cobe");
-
-        const globe = createGlobe(canvas, {
-            devicePixelRatio: 2,
-            width: 1000,
-            height: 1000,
-            phi: 0,
-            theta: 0,
-            dark: 1,
-            diffuse: 1.2,
-            scale: 1,
-            mapSamples: 16000,
-            mapBrightness: 6,
-            baseColor: [1, 1, 1],
-            markerColor: [1, 0.5, 1],
-            glowColor: [1, 1, 1],
-            offset: [0, 0],
-            markers: [
-                { location: [37.7595, -122.4367], size: 0.03 },
-                { location: [40.7128, -74.006], size: 0.1 }
-            ],
-            onRender: (state) => {
-                // Called on every animation frame.
-                // `state` will be an empty object, return updated params.
-                state.phi = phi;
-                phi += 0.01;
-            }
-        });
+    <script type="module" src="./canvas.js">
+       
     </script>
     <script src="./icons/all.js"></script>
     <script src="./index.js"></script>
